--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
     <!-- Place favicon.ico in the root directory -->
-
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,38 +24,45 @@
 
     <meta name="theme-color" content="#fafafa" />
   </head>
-  <div class="container">
-    <div class="jumbotron mt-5">
-      <div class="d-flex justify-content-center">
-        <div id="js-question" class="alert alert-primary" role="alert">
-          A simple primary alert—check it out!
+  <body>
+    <header class="page-header">
+      <h1 class="titile">IT QUIZ</h1>
+    </header>
+    <div class="container">
+      <div class="jumbotron mt-5">
+        <div class="d-flex justify-content-center">
+          <div id="js-question" class="alert alert-primary" role="alert">
+            A simple primary alert—check it out!
+          </div>
         </div>
-      </div>
 
-      <div id="js-items" class="d-flex justify-content-center">
-        <div class="m-2">
-          <button type="button" id="js-btn-1" class="btn btn-primary">
-            Primary
-          </button>
-        </div>
-        <div class="m-2">
-          <button type="button" id="js-btn-2" class="btn btn-primary">
-            Primary
-          </button>
-        </div>
-        <div class="m-2">
-          <button type="button" id="js-btn-3" class="btn btn-primary">
-            Primary
-          </button>
-        </div>
-        <div class="m-2">
-          <button type="button" id="js-btn-4" class="btn btn-primary">
-            Primary
-          </button>
+        <div id="js-items" class="d-flex justify-content-center">
+          <div class="m-2">
+            <button type="button" id="js-btn-1" class="btn btn-primary">
+              Primary
+            </button>
+          </div>
+          <div class="m-2">
+            <button type="button" id="js-btn-2" class="btn btn-primary">
+              Primary
+            </button>
+          </div>
+          <div class="m-2">
+            <button type="button" id="js-btn-3" class="btn btn-primary">
+              Primary
+            </button>
+          </div>
+          <div class="m-2">
+            <button type="button" id="js-btn-4" class="btn btn-primary">
+              Primary
+            </button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="app.js"></script>
-  <body></body>
+    <div class="re-start">
+      <a class="button" href="index.html">はじめからスタート</a>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
