--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title>IT QUIZ</title>
+    <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -62,6 +62,11 @@
     </div>
     <div class="re-start">
       <a class="button" href="index.html">はじめからスタート</a>
+    </div>
+    <div class="link" title="ITパスポートの公式サイトのリンク">
+      <a class="button" href="https://www3.jitec.ipa.go.jp/JitesCbt/index.html"
+        >公式サイト</a
+      >
     </div>
     <script src="app.js"></script>
   </body>
