--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
       <a class="button" href="index.html">はじめからスタート</a>
     </div>
     <div class="link" title="ITパスポートの公式サイトのリンク">
-      <a class="button" href="https://www3.jitec.ipa.go.jp/JitesCbt/index.html"
-        >公式サイト</a
+      <a class="button" href="https://www3.jitec.ipa.go.jp/JitesCbt/index.html" >公式サイト</a
       >
     </div>
     <script src="app.js"></script>
