--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="re-start">
       <a class="button" href="index.html">はじめからスタート</a>
     </div>
-    <div class="link" title="ITパスポートの公式サイトのリンク">
+    <div class="re-start" title="ITパスポートの公式サイトのリンク">
       <a class="button" href="https://www3.jitec.ipa.go.jp/JitesCbt/index.html" >公式サイト</a
       >
     </div>
