--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     <div class="re-start">
       <a class="button" href="index.html">はじめからスタート</a>
     </div>
+    <div class="re-start" title="用語について詳しく調べる">
+      <a class="button" href="https://wa3.i-3-i.info/">調べる</a>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
