--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
     <div class="re-start">
       <a class="button" href="index.html">はじめからスタート</a>
     </div>
-    <div class="re-start" title="ITパスポートの公式サイトのリンク">
-      <a class="button" href="https://www3.jitec.ipa.go.jp/JitesCbt/index.html" >公式サイト</a
-      >
+    <div class="re-start" title="用語について詳しく調べる">
+      <a class="button" href="https://wa3.i-3-i.info/">調べる</a>
     </div>
     <script src="app.js"></script>
   </body>
